--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
+    "pdf-lib": "^1.17.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "react": "^18.2.0",
