--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
     "pdf-lib": "^1.17.1",
@@ -21,6 +22,7 @@
     "primereact": "^9.6.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.1",
